# Customer-Xperience-Anomaly-Detector

./: README.md
Backend/: .env.example  .gitignore  Makefile  README.md  curl_examples.md  generate_mock_data.py  pyproject.toml  requirements.txt  verify_schema.py
Backend/configs/: config.local.yaml
Backend/data/input/: .gitkeep  mock_inference.csv  mock_train.csv
Backend/data/processed/: .gitkeep
Backend/docker/: Dockerfile.api  docker-compose.yml
Backend/models/artifacts/: .gitkeep  meta.joblib  meta_global.joblib  meta_iforest.joblib  meta_lof.joblib  model.joblib  preprocessor.joblib
Backend/src/: __init__.py  alerts.py  evaluate.py  features.py  io_utils.py  predict.py  scheduler.py  schema.py  service.py  telemetry.py  train.py
Backend/tests/: __init__.py  test_features.py  test_service.py  test_train.py
cx-anomaly-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cx-anomaly-frontend/src/: App.tsx  index.css
cx-anomaly-frontend/src/backend/: server.js
cx-anomaly-frontend/src/components/: AnomalyTable.tsx  Charts.tsx  ConfusionMatrix.tsx  DetailedScoresTable.tsx  FeatureImportance.tsx  FeatureSpaceScatter.tsx  GlassCard.tsx  GlowButton.tsx  InputForm.tsx  NeighborVisualization.tsx  StatsPanel.tsx  layout.tsx  theme-provider.tsx
cx-anomaly-frontend/src/hooks/: useTilt.ts
cx-anomaly-frontend/src/lib/: utils.ts
cx-anomaly-frontend/src/pages/: Dashboard.tsx  Home.tsx  HowItWorks.tsx
cx-anomaly-frontend/src/services/: api.ts
cx-anomaly-frontend/src/types/: index.ts
